WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
309988
[TextureMapper] Fix fallback path when TextureExternalOESYUV disabled
https://bugs.webkit.org/show_bug.cgi?id=309988
Summary
[TextureMapper] Fix fallback path when TextureExternalOESYUV disabled
Patrick Griffis
Reported
2026-03-15 13:05:21 PDT
This was a regression introduced with this feature in c8a6727eec001e likely just a copy-paste mistake from OES_EGL_IMAGE_EXTERNAL_DIRECTIVE(). When disabled the fallback type for SamplerExternalOESYUVType is sampler2D. This was reproduced on a mediatek device with libmali which does not support these extensions. Previously textures would be black boxes.
Attachments
Add attachment
proposed patch, testcase, etc.
Patrick Griffis
Comment 1
2026-03-15 13:08:05 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/60664
EWS
Comment 2
2026-03-16 08:24:19 PDT
Committed
309321@main
(420f7f61cec2): <
https://commits.webkit.org/309321@main
> Reviewed commits have been landed. Closing PR #60664 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug