[TextureMapper] Fix fallback path when TextureExternalOESYUV disabled https://bugs.webkit.org/show_bug.cgi?id=309988

Reviewed by Philippe Normand.

This was a regression introduced with this feature in c8a6727eec001e
likely just a copy-paste mistake from OES_EGL_IMAGE_EXTERNAL_DIRECTIVE().

When disabled the fallback type for SamplerExternalOESYUVType is sampler2D.

This was reproduced on a mediatek device with libmali which does not support
these extensions. Previously textures would be black boxes.

* Source/WebCore/platform/graphics/texmap/TextureMapperShaderProgram.cpp:

Canonical link: https://commits.webkit.org/309321@main